# yolo-tensorrt

./: .clang-format  .gitignore  CMakeLists.txt  example.py  test.py
modules/: calibrator.cpp  calibrator.h  class_detector.cpp  class_detector.h  class_yolo_detector.hpp  ds_image.cpp  kernel.cu  logger.cc  logger.h  plugin_factory.cpp  plugin_factory.h  trt_utils.cpp  trt_utils.h  yolo.cpp  yolo.h  yolo_config_parser.cpp  yolo_config_parser.h  yolo_wrapper.cpp  yolo_wrapper.h  yoloplugin_lib.cpp  yolov2.cpp  yolov2.h  yolov3.cpp  yolov3.h
samples/: sample_detector.cpp
wrapper/: pydetector.cc
